Bug 63819 - Ctrl+Backspace removes also the space
Summary: Ctrl+Backspace removes also the space
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other Linux (All)
: medium normal
Assignee: himanshu
URL:
Whiteboard: target:4.2.0
Keywords: difficultyBeginner, easyHack, skillCpp
Depends on:
Blocks:
 
Reported: 2013-04-22 23:13 UTC by Volkan
Modified: 2016-02-18 16:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Bug 63819 - : Ctrl+Backspace removes also the space (488 bytes, patch)
2013-05-03 20:33 UTC, himanshu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volkan 2013-04-22 23:13:31 UTC
Problem description: 

Using Ctrl+Backspace combination removes the word with the space between the deleted word and the previous word.

Steps to reproduce:
1. Open Write
2. Type at least two words
3. Go to end of the line
4. Use Ctrl+Backspace

Current behavior:

It also removes the space

Expected behavior:

As usual, this should only remove the word as the other applications do
              
Operating System: Ubuntu
Version: 4.0.2.2 release
Comment 1 Andras Timar 2013-04-23 06:53:52 UTC
Help says:
https://help.libreoffice.org/Writer/Shortcut_Keys_for_Writer
Ctrl+Backspace 	Delete text to beginning of word

So the error report looks valid. The bug was inherited from OOo.
Comment 3 himanshu 2013-05-03 20:33:00 UTC
Created attachment 78823 [details]
Bug 63819 - : Ctrl+Backspace removes also the space
Comment 4 Volkan 2013-07-02 09:24:16 UTC
(In reply to comment #3)
> Created attachment 78823 [details] [review]
> Bug 63819 - : Ctrl+Backspace removes also the space


Is this patch already applied?
Comment 5 Björn Michaelsen 2013-10-04 18:46:54 UTC
adding LibreOffice developer list as CC to unresolved EasyHacks for better visibility.

see e.g. http://nabble.documentfoundation.org/minutes-of-ESC-call-td4076214.html for details
Comment 6 Commit Notification 2013-11-14 12:28:57 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=083114bb132b879cfb899361ece375c8580ae505

fdo#63819 Ctrl+Backspace also deletes the space before the word



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-15 23:22:25 UTC
Migrating Whiteboard tags to Keywords: (EasyHack DifficultyEasy SkillCpp )
[NinjaEdit]
Comment 8 Björn Michaelsen 2016-02-05 11:10:49 UTC
difficultyEasy -> difficultyBeginner. The former never really existed and only makes the EasyHack not appear on the wiki.
Comment 9 Robinson Tryon (qubit) 2016-02-18 16:37:17 UTC
Remove LibreOffice Dev List from CC on EasyHacks
(curtailing excessive email to list)
[NinjaEdit]