fdo#63819 Ctrl+Backspace also deletes the space before the word

Change-Id: I147e8632c36ac0755a539d89ea5d34207839ea7c