sw/source/ui/wrtsh/delete.cxx
@@ -521,8 +521,8 @@ long SwWrtShell::DelPrvWord()
         {
             if ( _PrvWrdForDelete() ) // #i92468#
             {
-                // skip over all-1 spaces
-                short n = -1;
+                // skip over all spaces
+                short n = 0;
                 while( ' ' == GetChar( sal_False, n ))
                     --n;
 
